--- a/templates/query.html
+++ b/templates/query.html
@@ -8,13 +8,21 @@
 <body>
     <h1>Search SNPs</h1>
     <form action="/query" method="post">
-        <label for="query">Enter rsid:</label>
-        <input type="text" id="query1" name="query1">
-        <label for="query">Enter mapped gene name:</label>
-        <input type="text" id="query2" name="query2">
-        <label for="query">Enter genomic postion/coordinate:</label>
-        <input type="text" id="query3" name="query3">
-        <button type="submit">Search</button>
+        <div>
+            <label for="query">Enter rsid:</label>
+            <input type="text" id="query1" name="query1">
+        </div>
+        <div>
+            <label for="query">Enter mapped gene name:</label>
+            <input type="text" id="query2" name="query2">
+        </div>
+        <div>
+            <label for="query">Enter genomic postion/coordinate:</label>
+            <input type="text" id="query3" name="query3">
+        </div>
+        <div>
+            <button type="submit">Search</button>
+        </div>
     </form>
 </body>
 </html>
