--- a/templates/query_result.html
+++ b/templates/query_result.html
@@ -5,21 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Results</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <h1>Search Results</h1> {% if snps %} <table class="table table-striped">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">SNP RS-Value</th>
-          <th scope="col">Genomic Position/Coordinate</th>
-          <th scope="col">Mapped Gene Name</th>
-        </tr>
-      </thead>
-      <tbody> {% for snp in snps %} <tr>
-          <td>{{ snp.SNPS }}</td>
-          <td>{{ snp.MAPPED_GENE }}</td>
-          <td>{{ snp.CHR_POS }}</td>
-        </tr> {% endfor %} </tbody>
-    </table> {% else %} <p>No results found.</p> {% endif %}
-  </body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+      <a class="navbar-brand" href="#">T2D Jammy Jellyfish</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item ">
+            <a class="nav-link" href="/">Home </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/query">Query <span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container ms-3">
+      <h1>Search Results</h1> {% if snps %} <table class="table table-striped">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">SNP RS-Value</th>
+            <th scope="col">Genomic Position/Coordinate</th>
+            <th scope="col">Mapped Gene Name</th>
+            <th scope="col">P Value</th>
+            <th scope="col">Phenotype</th>
+            <th scope="col">Population</th>
+          </tr>
+        </thead>
+        <tbody> {% for snp in snps %} <tr>
+            <td>{{ snp.rs_value }}</td>
+            <td>{{ snp.mapped_gene }}</td>
+            <td>{{ snp.gene_pos }}</td>
+            <td>{{ snp.snp_p_value }}</td>
+            <td>{{ snp.snp_phenotype }}</td>
+            <td>{{ snp.snp_population }}</td>
+          </tr> {% endfor %} </tbody>
+      </table> {% else %} <p>No results found.</p> {% endif %}
+    </div>
+    </body>
 </html>
