--- a/templates/query_result.html
+++ b/templates/query_result.html
@@ -27,7 +27,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container ms-3">
+    <div class="container-fluid">
       <h1>Search Results</h1> {% if snps %} <table class="table table-striped">
         <thead class="thead-dark">
           <tr>
