--- a/templates/query.html
+++ b/templates/query.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search SNPs</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -53,15 +54,36 @@
           <form method="POST">
         </form>
           <div class="container-fluid">
-            <h1>Search Results</h1> {% if snps %} <table class="table table-striped">
+            <h1>Search Results</h1> 
+            {% if snps %} 
+            <input type="text" id="tableFilter" class="form-control mb-3" placeholder="Add filter here...">
+            <table id="snp-table" class="table table-striped">
               <thead class="thead-dark">
                 <tr>
-                  <th scope="col">SNP RS-Value</th>
-                  <th scope="col">Genomic Position/Coordinate</th>
-                  <th scope="col">Mapped Gene Name</th>
-                  <th scope="col">P Value</th>
-                  <th scope="col">Phenotype</th>
-                  <th scope="col">Population</th>
+                  <th scope="col" col-index = 1>SNP RS-Value
+                    <select class="table-filter">
+                        <option value ="all"></option>
+                      </th>
+                  <th scope="col" col-index = 2>Genomic Position/Coordinate
+                    <select class="table-filter">
+                      <option value ="all"></option>
+                  </th>
+                  <th scope="col" col-index = 3>Mapped Gene Name
+                    <select class="table-filter">
+                      <option value ="all"></option>
+                  </th>
+                  <th scope="col" col-index = 4>P Value
+                    <select class="table-filter">
+                      <option value ="all"></option>
+                  </th>
+                  <th scope="col" col-index = 5>Phenotype
+                    <select class="table-filter">
+                      <option value ="all"></option>
+                  </th>
+                  <th scope="col" col-index = 6>Population
+                    <select class="table-filter">
+                      <option value ="all"></option>
+                  </th>
                 </tr>
               </thead>
               <tbody> {% for snp in snps %} <tr>
@@ -73,6 +95,7 @@
                   <td>{{ snp.snp_population }}</td>
                 </tr> {% endfor %} </tbody>
             </table> {% else %} <p>No results found.</p> {% endif %}
+            <script src="/static/js/filter2.js"></script>
           </div>
         </form>
       </div>
