added ontology page, needs to be visually improved but functionality is there

--- a/templates/query.html
+++ b/templates/query.html
@@ -100,7 +100,7 @@ body{background-color:whitesmoke;}>
                   <td>{{ snp.gene_pos }}</td>
 
                   <td>
-                    <a href="https://www.genecards.org/cgi-bin/carddisp.pl?gene={{ snp.mapped_gene }}" target="_blank">
+                    <a href="/query/ontology/{{ snp.mapped_gene }}" target="_blank">
                       {{ snp.mapped_gene }}
                     </a>
                     
