--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,14 @@
     </div>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-info">
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <img src="logo.png.png" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
+                <!-- <img src="{{ url_for('static', filename='logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo"> -->
+                <img src="{{ url_for('static', filename='static/logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
+
+                <!-- <img src="logo.png" alt="T2D Jammy Jellyfish Logo" class="nav-logo"> -->
                 <span class="brand-text">T2D Jammy Jellyfish</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
@@ -35,7 +38,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="query/">Query</a></li>
                 </ul>
             </div>
