cleaned up code and added smaller logos

--- a/templates/query.html
+++ b/templates/query.html
@@ -69,30 +69,12 @@ body{background-color:whitesmoke;}>
             <table id="snp-table" class="table table-striped">
               <thead class="thead-dark">
                 <tr>
-                  <th scope="col" col-index = 1>SNP RS-Value
-                    <!-- <select class="table-filter">
-                        <option value ="all"></option> -->
-                      </th>
-                  <th scope="col" col-index = 2>Genomic Position/Coordinate
-                    <!-- <select class="table-filter">
-                      <option value ="all"></option> -->
-                  </th>
-                  <th scope="col" col-index = 3>Mapped Gene Name
-                    <!-- <select class="table-filter">
-                      <option value ="all"></option> -->
-                  </th>
-                  <th scope="col" col-index = 4>P Value
-                    <!-- <select class="table-filter">
-                      <option value ="all"></option> -->
-                  </th>
-                  <th scope="col" col-index = 5>Phenotype
-                    <!-- <select class="table-filter">
-                      <option value ="all"></option> -->
-                  </th>
-                  <th scope="col" col-index = 6>Population
-                    <!-- <select class="table-filter">
-                      <option value ="all"></option> -->
-                  </th>
+                  <th scope="col" col-index = 1>SNP RS-Value</th>
+                  <th scope="col" col-index = 2>Genomic Position/Coordinate</th>
+                  <th scope="col" col-index = 3>Mapped Gene Name</th>
+                  <th scope="col" col-index = 4>P Value</th>
+                  <th scope="col" col-index = 5>Phenotype</th>
+                  <th scope="col" col-index = 6>Population</th>
                 </tr>
               </thead>
               <tbody> {% for snp in snps %} <tr>
