--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,11 @@
         <div class="container">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <!-- <img src="{{ url_for('static', filename='logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo"> -->
-                <img src="{{ url_for('static', filename='static/logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
+                <!-- <img src="{{ url_for('static', filename='logo (15).png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo"> -->
+                <!-- <img src="{{ url_for('static', filename='static/logo (15).png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo"> -->
+                <!-- <img src="{{ url_for('static', filename='logo (15).png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo"> -->
+                <img src="{{ url_for('static', filename='logo (15).png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
+
 
                 <!-- <img src="logo.png" alt="T2D Jammy Jellyfish Logo" class="nav-logo"> -->
                 <span class="brand-text">T2D Jammy Jellyfish</span>
