--- a/templates/ontology.html
+++ b/templates/ontology.html
@@ -1,14 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gene ontology</title>
+    <title>Gene Ontology</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
+<style>
+    body {
+        background-color: whitesmoke;
+    }
+
+    .container-fluid {
+        margin-top: 20px;
+        width: 100%;
+    }
+</style>
+
 <body>
-    <h1>{{ ont_mapped_gene }}</h1>
-    <p>See more details ... 
-        <a href="https://www.genecards.org/cgi-bin/carddisp.pl?gene={{ ont_mapped_gene }}" target="_blank">{{ ont_mapped_gene }}</a></p>
-    <a href="/">Back to Home</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+        <a class="navbar-brand" href="#">T2D Jammy Jellyfish</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/query">Query <span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <br><br>
+    <div class="container-fluid">
+        <h1>Gene Ontology Results for: {{ mapped_gene }}</h1>
+        <p>See more details on
+            <a href="https://www.genecards.org/cgi-bin/carddisp.pl?gene={{ mapped_gene }}" target="_blank">{{
+                mapped_gene }}</a>.
+        </p>
+        <h2>Ontology Results</h2>
+        {% if ontology_results %}
+        <input type="text" id="tableFilter" class="form-control mb-3" placeholder="Add filter here...">
+        <table id="ontology-table" class="table table-striped">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col" col-index="1">GO ID</th>
+                    <th scope="col" col-index="2">Gene Name</th>
+                    <th scope="col" col-index="3">Qualifier</th>
+                    <th scope="col" col-index="4">Gene Function</th>
+                    <th scope="col" col-index="5">Evidence Code</th>
+                    <th scope="col" col-index="6">Aspect</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for row in ontology_results %}
+                <tr>
+                    <td>
+                        <a href="https://www.ebi.ac.uk/QuickGO/term/{{ row.go_id }}" target="_blank">{{ row.go_id }}</a>
+                    </td>
+                    <td>{{ row.gene_name }}</td>
+                    <td>{{ row.qualifier }}</td>
+                    <td>{{ row.gene_function }}</td>
+                    <td>{{ row.evidence_code }}</td>
+                    <td>{{ row.aspect }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        {% else %}
+        {% endif %}
+        <a href="/" class="btn btn-primary">Back to Home</a>
+    </div>
+    <script src="/static/js/filter.js"></script>
 </body>
+
 </html>
