--- a/templates/query.html
+++ b/templates/query.html
@@ -41,8 +41,8 @@ body{background-color:whitesmoke;}
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item active"><a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="query/">Query</a></li>
+                  <li class="nav-item"><a class="nav-link" href="/">Home</span></a></li>
+                  <li class="nav-item active"><a class="nav-link" href="/query">Query <span class="sr-only">(current)</a></li>
               </ul>
           </div>
       </div>
