cleaned up repository and fixed dark mode for most things, and added new nav bar to ontology page

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="query/">Query</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/query">Query</a></li>
                 </ul>
             </div>
         </div>
@@ -44,7 +44,7 @@
 
     <!-- Hero Section -->
     <header class="hero-section">
-        <div class="container text-center text-white">
+        <div class="container text-center">
             <h1 class="display-4">Explore Type 2 Diabetes Genomic Data</h1>
             <p class="lead">Find SNPs, analyze populations, and download reports with ease.</p>
         </div>
