--- a/templates/query.html
+++ b/templates/query.html
@@ -45,7 +45,7 @@
       </div>
   </nav>
       <br><br>
-      <div class="container-fluid">
+      <div class="container-fluid full-height">
         <h1>Search SNPs</h1>
         <div class="box">
           Please enter any known information on the SNP of interest
