--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -6,7 +6,30 @@
     <title>Visualization</title>
 </head>
 <body>
-    <h1>Data Visualization</h1>
-    <p>Here you can include your visualizations (e.g., charts, graphs, etc.).</p>
+    <h1>Positive Selection Summary Statistics for <strong>{{snp.rs_value}}</strong></h1>
+    <div class="box">
+        Select South Asian Population and Summary Statistic 
+        <br><br>
+      </div>
+    <div>
+        <label for="query">Choose Population: </label>
+        <input type="text" id="query5" list="populations" name="query5"value="{{request.form.get('query5','')}}">
+        <datalist id="populations">
+          <option value="Bengali in Bangladesh">
+          <option value="Gujarati Indians in Houston, TX">
+          <option value="Indian Telugu in the UK">
+          <option value="Punjabi in Lahore, Pakistan">
+        </datalist>
+      </div>
+      <div>
+        <label for="query">Choose Summary Statistic </label>
+        <input type="text" id="query6" list="stats_type" name="query6" value="{{request.form.get('query6','')}}">
+        <datalist id="stats_type">
+            <option value="Tajima's D">
+            <option value="nSL">
+            <option value="iHS">
+        </datalist>
+      </div>
+
 </body>
 </html>
