attempt to get vis to work 15:24

--- a/templates/query.html
+++ b/templates/query.html
@@ -109,7 +109,7 @@
               </thead>
               <tbody> {% for snp, snp_stat in snps %} <tr>
                   <td>
-                    <a href="/query/visualization/{{ snp.rs_value }}" target="_blank" >
+                    <a href="/query/visualisation/{{ snp.rs_value }}" target="_blank" >
                       {{ snp.rs_value }}
                     </a>
                     
