--- a/templates/visualisation.html
+++ b/templates/visualisation.html
@@ -91,11 +91,40 @@
                 <button type="submit">Search</button>
             </div>
         </form>
-        <!-- Display the plot image -->
-         {% if plot_url %}
-            <h3>Plot for {{ rs_value }}</h3>
-            <img src="data:image/png;base64,{{ plot_url }}" alt="Plot">
-         {% endif %}
+        <br><br>
+        <h1>Search Results</h1>
+        <table id="snp-table" class="table table-striped">
+            <thead class="thead-dark">
+              <tr>
+                <th scope="col" col-index = 1>SNP RS-Value</th>
+                <th scope="col" col-index = 2>Genomic Position/Coordinate</th>
+                <th scope="col" col-index = 3>Mapped Gene Name</th>
+                <th scope="col" col-index = 4>Chromosome</th>
+                <th scope="col" col-index = 5>P Value</th>
+                <th scope="col" col-index = 6>Phenotype</th>
+                <th scope="col" col-index = 7>Population</th>
+              </tr>
+            </thead>
+            <tbody><tr>
+                <td>{{ snp.rs_value }}</td>
+                <td>{{ snp.gene_pos }}</td>
+                <td>
+                  <a href="/query/ontology/{{ snp.mapped_gene }}" target="_blank">
+                    {{ snp.mapped_gene }}
+                  </a>
+                </td>
+                <td>{{snp.chr_id}}</td>
+                <td>{{ snp.snp_p_value }}</td>
+                <td>{{ snp.snp_phenotype }}</td>
+                <td>{{ snp.snp_population }}</td>
+            </tr> 
+            </tbody>
+          </table> 
+
+        <br><br>
+        <!-- Display the plot image-->
+        <img src="data:image/png;base64,{{ image_data }}">
+
      <script>
         document.addEventListener("DOMContentLoaded", function() {
             const darkModeBtn = document.getElementById("darkModeBtn");
