--- a/templates/visualisation.html
+++ b/templates/visualisation.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,24 +14,30 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- Meta Tags -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
+
 <style>
     body {
         background-color: whitesmoke;
     }
 
-    .container-fluid {
+    .container {
         margin-top: 20px;
-        width: 100%;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #populationInfo {
+        margin-top: 20px;
+        font-size: 1.1em;
+        color: #333;
+    }
+
+    .box {
+        text-align: center;
+        margin-bottom: 30px;
     }
 </style>
 
@@ -43,9 +48,9 @@
         <button onclick="increaseFont()">A+</button>
         <button onclick="decreaseFont()">A-</button>
     </div>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-info">
         <div class="container">
-            <!-- Logo -->
             <a class="navbar-brand" href="#">
                 <img src="{{ url_for('static', filename='logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
                 <span class="brand-text">T2D Jammy Jellyfish</span>
@@ -61,145 +66,109 @@
             </div>
         </div>
     </nav>
-    <br><br>
-    <br><br>
-        <h2>Positive Selection Summary Statistics for <strong>{{rs_value}}</strong></h2>
+
+    <div class="container">
+        <h2 class="text-center">Positive Selection Summary Statistics for <strong>{{rs_value}}</strong></h2>
         <div class="box">
-            Select South Asian Population and Summary Statistic 
+            Select South Asian Population and Summary Statistic
         </div>
-        <br><br>
+
         <form method="post" action="{{ url_for('visualisation', rs_value=rs_value) }}">
-                <div>   
+            <div class="form-group">
                 <label for="query">Choose Population: </label>
-                <input type="text" id="query5" list="populations" name="query5"value="{{request.form.get('query5','')}}">
+                <input type="text" id="query5" list="populations" name="query5" value="{{ request.form.get('query5','') }}" class="form-control">
                 <datalist id="populations">
-                <option value="Bengali in Bangladesh">
-                <option value="Gujarati Indians in Houston, TX">
-                <option value="Indian Telugu in the UK">
-                <option value="Punjabi in Lahore, Pakistan">
-                <option value="All">
+                    <option value="Bengali in Bangladesh">
+                    <option value="Gujarati Indians in Houston, TX">
+                    <option value="Indian Telugu in the UK">
+                    <option value="Punjabi in Lahore, Pakistan">
+                    <option value="All">
                 </datalist>
             </div>
-            <div>
-                <label for="query">Choose Summary Statistic </label>
-                <input type="text" id="query6" list="stats_type" name="query6" value="{{request.form.get('query6','')}}">
+            <div class="form-group">
+                <label for="query">Choose Summary Statistic: </label>
+                <input type="text" id="query6" list="stats_type" name="query6" value="{{request.form.get('query6','')}}" class="form-control">
                 <datalist id="stats_type">
                     <option value="Tajima's D">
                     <option value="nSL">
                 </datalist>
             </div>
-            <div>
-                <label for query="query">Choose Flanking Region (± kb)</label>
-                <input type="text" id="query7" list="Region_interest" name="query7" value="{{request.form.get('query7','')}}">
+            <div class="form-group">
+                <label for="query">Choose Flanking Region (± kb):</label>
+                <input type="text" id="query7" list="Region_interest" name="query7" value="{{request.form.get('query7','')}}" class="form-control">
                 <datalist id="Region_interest">
-                    <option value="10 ">
+                    <option value="10">
                     <option value="25">
                     <option value="50">
                     <option value="100">
                 </datalist>
             </div>
-             <!-- Submit button -->
-            <div>
-                <button type="submit">Search</button>
-            </div>
+            <button type="submit" class="btn btn-primary btn-block">Search</button>
         </form>
+
         <br><br>
-        <h1>Search Results</h1>
+
+        <!-- Display selected population info -->
+        <div id="populationInfo">
+            {{ pop_info_disp }}
+        </div>
+
+        <br><br>
+        <h1 class="text-center">Search Results</h1>
         <table id="snp-table" class="table table-striped">
             <thead class="thead-dark">
-              <tr>
-                <th scope="col" col-index = 1>SNP RS-Value</th>
-                <th scope="col" col-index = 2>Genomic Position/Coordinate</th>
-                <th scope="col" col-index = 3>Mapped Gene Name</th>
-                <th scope="col" col-index = 4>Chromosome</th>
-                <th scope="col" col-index = 5>P Value</th>
-                <th scope="col" col-index = 6>Phenotype</th>
-                <th scope="col" col-index = 7>Population</th>
-              </tr>
+                <tr>
+                    <th scope="col">SNP RS-Value</th>
+                    <th scope="col">Genomic Position/Coordinate</th>
+                    <th scope="col">Mapped Gene Name</th>
+                    <th scope="col">Chromosome</th>
+                    <th scope="col">P Value</th>
+                    <th scope="col">Phenotype</th>
+                    <th scope="col">Population</th>
+                </tr>
             </thead>
-            <tbody><tr>
-                <td>{{ snp.rs_value }}</td>
-                <td>{{ snp.gene_pos }}</td>
-                <td>
-                  <a href="/query/ontology/{{ snp.mapped_gene }}" target="_blank">
-                    {{ snp.mapped_gene }}
-                  </a>
-                </td>
-                <td>{{snp.chr_id}}</td>
-                <td>{{ snp.snp_p_value }}</td>
-                <td>{{ snp.snp_phenotype }}</td>
-                <td>{{ snp.snp_population }}</td>
-            </tr> 
+            <tbody>
+                <tr>
+                    <td>{{ snp.rs_value }}</td>
+                    <td>{{ snp.gene_pos }}</td>
+                    <td>
+                        <a href="/query/ontology/{{ snp.mapped_gene }}" target="_blank">{{ snp.mapped_gene }}</a>
+                    </td>
+                    <td>{{snp.chr_id}}</td>
+                    <td>{{ snp.snp_p_value }}</td>
+                    <td>{{ snp.snp_phenotype }}</td>
+                    <td>{{ snp.snp_population }}</td>
+                </tr>
             </tbody>
-          </table> 
+        </table>
 
         <br><br>
+
         <!-- Display the plot image-->
-        <img src="data:image/png;base64,{{ image_data }}">
+        <img src="data:image/png;base64,{{ image_data }}" class="img-fluid">
 
         <br><br>
-        <h2>SNP Query Summary Statistics</h2>
+        <h2 class="text-center">SNP Query Summary Statistics</h2>
         <table id="SMP_query_results" class="table table-striped">
             <thead class="thead-dark">
-              <tr>
-                <th scope="col" col-index = 1>SNP RS-Value</th>
-                <th scope="col" col-index = 2>Genomic Position/Coordinate</th>
-                <th scope="col" col-index = 3>Chromosome</th>
-                <th scope="col" col-index = 4>Tajima's D</th>
-                <th scope="col" col-index = 4>Tajima's D Mean (selected region)</th>
-                <th scope="col" col-index = 4>Tajima's D Standard Deviation (Selected region)</th>
-              </tr>
+                <tr>
+                    <th scope="col">SNP RS-Value</th>
+                    <th scope="col">Genomic Position/Coordinate</th>
+                    <th scope="col">Chromosome</th>
+                    <th scope="col">Tajima's D</th>
+                    <th scope="col">Tajima's D Mean (selected region)</th>
+                    <th scope="col">Tajima's D Standard Deviation (Selected region)</th>
+                </tr>
             </thead>
-            <tbody><tr>
-                <td>{{ snp.rs_value }}</td>
-                <td>{{ snp.gene_pos }}</td>
-                <td>{{snp.chr_id}}</td>
-            </tr> 
+            <tbody>
+                <tr>
+                    <td>{{ snp.rs_value }}</td>
+                    <td>{{ snp.gene_pos }}</td>
+                    <td>{{snp.chr_id}}</td>
+                </tr>
             </tbody>
-          </table> 
-
-
-     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const darkModeBtn = document.getElementById("darkModeBtn");
-
-            // Load Dark Mode Preference
-            if (localStorage.getItem("darkMode") === "enabled") {
-                document.body.classList.add("dark-mode");
-                darkModeBtn.textContent = "☀️";
-            }
-
-            // Toggle Dark Mode
-            darkModeBtn.addEventListener("click", function() {
-                document.body.classList.toggle("dark-mode");
-
-                // Save User Preference
-                if (document.body.classList.contains("dark-mode")) {
-                    localStorage.setItem("darkMode", "enabled");
-                    darkModeBtn.textContent = "☀️";
-                } else {
-                    localStorage.setItem("darkMode", "disabled");
-                    darkModeBtn.textContent = "🌙";
-                }
-            });
-        });
-
-        // Font Size Adjusters
-        function increaseFont() {
-            document.body.style.fontSize = "larger";
-        }
-
-        function decreaseFont() {
-            document.body.style.fontSize = "smaller";
-        }
-    </script>
-
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
-
-
+        </table>
+    </div>
 </body>
-</html>
 
+</html>
