--- a/templates/visualisation.html
+++ b/templates/visualisation.html
@@ -149,9 +149,11 @@
 
         <br><br>
         {% if filt %}
-        <h2 class="text-center">SNP Query Summary Statistics</h2>
-        <table id="SMP_query_results" class="table table-striped">
-            <thead class="thead-dark">
+            <form method="post">
+                 <input type="submit" name="download" class="btn btn-primary">Download Data (TSV)</button>
+                 <h2 class="text-center">SNP Query Summary Statistics</h2>
+                 <table id="SMP_query_results" class="table table-striped">
+                 <thead class="thead-dark">
                 <tr>
                     <th scope="col">SNP RS-Value</th>
                     <th scope="col">Genomic Position/Coordinate</th>
@@ -172,6 +174,7 @@
                 </tr>
             </tbody>
         </table>
+        </form>
         {% endif %}
     </div>
 </body>
