attempt to fix nsl

--- a/templates/about.html
+++ b/templates/about.html
@@ -54,7 +54,7 @@
             About the team:
         </p>
         <p>
-            This project was create by the Jammy Jellyfish team as part of the Group Project Module in MSc Bioinformatics at Queen Mary University of London.
+            This project was created by the Jammy Jellyfish team as part of the Group Project Module in MSc Bioinformatics at Queen Mary University of London.
         </p>
     </div>
 </div>
