near final changes to code

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="{{ url_for('static', filename='logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
-                <span class="brand-text">T2D Jammy Jellyfish</span>
+                <span class="brand-text">T2D SNP ATLAS</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Main Section -->
     <br></br>
     <header class="hero-section">
         <div class="container text-center">
@@ -51,7 +51,7 @@
         </div>
     </header>
 
-    <!-- Feature Section -->
+    <!-- Feature view -->
     <section class="container mt-5">
         <div class="row">
             <div class="col-md-4">
@@ -89,7 +89,7 @@
         <p>&copy; 2025 T2D SNP Atlas. All rights reserved.</p>
     </footer>
 
-    <!-- JavaScript -->
+    <!-- JavaScript code -->
     <script>
         // Accessibility functions
         let fontSize = 16;
