--- a/templates/about.html
+++ b/templates/about.html
@@ -23,7 +23,7 @@
     <div class="container">
         <a class="navbar-brand" href="/">
             <img src="{{ url_for('static', filename='logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
-            <span class="brand-text">T2D Jammy Jellyfish</span>
+            <span class="brand-text">T2D SNP ATLAS</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -63,6 +63,7 @@
     <p>&copy; 2025 T2D SNP Atlas. All rights reserved.</p>
 </footer>
 
+<!-- Accessibility Controls JS code-->
 <script>
     let fontSize = 16;
     const body = document.querySelector('body');
