--- a/templates/ontology.html
+++ b/templates/ontology.html
@@ -47,7 +47,7 @@
             <!-- Logo -->
             <a class="navbar-brand" href="#">
                 <img src="{{ url_for('static', filename='logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
-                <span class="brand-text">T2D Jammy Jellyfish</span>
+                <span class="brand-text">T2D SNP ATLAS</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -70,6 +70,7 @@
         </p>
         <br></br>
         <br></br>
+        <!-- Info on what this is -->
         <p>
             Gene Ontology (GO) is a standardized framework for representing gene and gene product attributes across different species
             <br></br>
@@ -85,6 +86,7 @@
             </pp>
         <br></br>
         <br></br>
+        <!-- Results table -->
         <h2>Results</h2>
         {% if ontology_results %}
         <input type="text" id="tableFilter" class="form-control mb-3" placeholder="Add filter here...">
@@ -118,7 +120,8 @@
         {% endif %}
         <a href="/" class="btn btn-primary">Back to Home</a>
     </div>
-    <script src="/static/js/filter.js"></script>
+
+    <!-- Accessiblity code -->
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
