--- a/templates/query.html
+++ b/templates/query.html
@@ -31,7 +31,7 @@
 
 
               <!-- <img src="logo.png" alt="T2D Jammy Jellyfish Logo" class="nav-logo"> -->
-              <span class="brand-text">T2D Jammy Jellyfish</span>
+              <span class="brand-text">T2D SNP ATLAS</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
               <span class="navbar-toggler-icon"></span>
@@ -46,6 +46,7 @@
       </div>
   </nav>
       <br><br>
+      <!-- Allow user to enter information here -->
       <div class="container-fluid full-height">
         <h1>Search SNPs</h1>
         <div class="box">
@@ -91,7 +92,7 @@
           }
         </style>
           <div class="container-fluid">
-          
+          <!-- Allow user to see results -->
           <h1>Search Results</h1> 
           <p><strong>Click</strong> on SNP of interest to view <strong> Positive Selection Summary Statistics</strong> in South Asian Populations</p>
             {% if snps %} 
@@ -135,9 +136,8 @@
         </form>
       
       </div>
-      <!-- JavaScript -->
+      <!-- JavaScript code -->
       <script>
-        // Accessibility functions
         let fontSize = 16;
         const body = document.querySelector('body');
         
