--- a/templates/visualisation.html
+++ b/templates/visualisation.html
@@ -58,7 +58,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="{{ url_for('static', filename='logo.png') }}" alt="T2D Jammy Jellyfish Logo" class="nav-logo">
-                <span class="brand-text">T2D Jammy Jellyfish</span>
+                <span class="brand-text">T2D SNP ATLAS</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -95,7 +95,7 @@
                 <label for="query">Choose Summary Statistic: </label>
                 <input type="text" id="query6" list="stats_type" name="query6" value="{{ request.form.get('query6','') }}" class="form-control">
                 <datalist id="stats_type">
-                    <option value="Tajima's D">
+                    <option value="Tajimas_D">
                     <option value="nSL">
                 </datalist>
             </div>
@@ -124,10 +124,10 @@
         <table id="snp-table" class="table table-striped">
             <thead class="thead-dark">
                 <tr>
-                    <th scope="col">SNP RS-Value</th>
+                    <th scope="col">SNP rs-Value</th>
+                    <th scope="col">Chromosome</th>
                     <th scope="col">Genomic Position/Coordinate</th>
                     <th scope="col">Mapped Gene Name</th>
-                    <th scope="col">Chromosome</th>
                     <th scope="col">P Value</th>
                     <th scope="col">Phenotype</th>
                     <th scope="col">Population</th>
@@ -136,11 +136,12 @@
             <tbody>
                 <tr>
                     <td>{{ snp.rs_value }}</td>
+                    <td>{{ snp.chr_id }}</td>
                     <td>{{ snp.gene_pos }}</td>
                     <td>
                         <a href="/query/ontology/{{ snp.mapped_gene }}" target="_blank">{{ snp.mapped_gene }}</a>
                     </td>
-                    <td>{{ snp.chr_id }}</td>
+                    
                     <td>{{ snp.snp_p_value }}</td>
                     <td>{{ snp.snp_phenotype }}</td>
                     <td>{{ snp.snp_population }}</td>
@@ -150,37 +151,40 @@
 
         <br><br>
 
-        <!-- Display the plot image-->
-        <img src="data:image/png;base64,{{ image_data }}" class="img-fluid">
+        <!-- Display the plotly plot -->
+        <div id="plotly-plot">
+            {{ plot_html|safe }}
+        </div>
 
         <br><br>
         {% if filt %}
             <form method="get" action="{{ url_for('download_stats', rs_value=rs_value) }}">
                 <input type="hidden" name="pop" value="{{ request.form.get('query5', 'All') }}">
                 <input type="hidden" name="window" value="{{ request.form.get('query7', 10) }}">
+                <input type="hidden" name="stat" value="{{ request.form.get('query6', 'Tajima\'s D') }}">
                 <button type="submit" class="btn btn-primary">
-                    Download (TSV)
+                    Download {{ request.form.get('query6', 'Tajimas_D') }} (TSV)
                 </button>
             </form>
 
-            <h2 class="text-center">SNP Query Summary Statistics</h2>
+            <h2 class="text-center">SNP Query Summary Statistics of Region of Interest</h2>
             <table id="SNP_query_results" class="table table-striped">
                 <thead class="thead-dark">
                     <tr>
-                        <th scope="col">SNP RS-Value</th>
-                        <th scope="col">Genomic Position/Coordinate</th>
+                        <th scope="col">SNP rs-value</th>
                         <th scope="col">Chromosome</th>
-                        <th scope="col">Tajima's D</th>
-                        <th scope="col">Tajima's D Mean (selected region)</th>
-                        <th scope="col">Tajima's D Standard Deviation (Selected region)</th>
+                        <th scope="col">Genomic Position/Coordinate</th>
+                        <th scope="col">{{stat_title}}</th>
+                        <th scope="col">{{stat_title}} Mean (selected region)</th>
+                        <th scope="col">{{stat_title}} Standard Deviation (Selected region)</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>{{ snp.rs_value }}</td>
-                        <td>{{ snp.gene_pos }}</td>
                         <td>{{ snp.chr_id }}</td>
-                        <td>{{ tajD_value }}</td>
+                        <td>{{ snp.gene_pos }}</td>
+                        <td>{{ final_stat }}</td>
                         <td>{{ region_mean }}</td>
                         <td>{{ region_std }}</td>
                     </tr>
@@ -189,8 +193,8 @@
         {% endif %}
     </div>
 
+<!-- Accessibility Controls JS-->
     <script>
-        // Accessibility functions
         let fontSize = 16;
         const body = document.querySelector('body');
         
