removal of filter

--- a/templates/ontology.html
+++ b/templates/ontology.html
@@ -74,7 +74,7 @@
                     <th scope="col">GO ID</th>
                     <th scope="col">Gene Name</th>
                     <th scope="col">Qualifier</th>
-                    <th scope="col">Gene Function</th>
+                    <th scope="col">Gene Description</th>
                     <th scope="col">Evidence Code</th>
                     <th scope="col">Aspect</th>
                 </tr>
