updated logo in tab

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="icon" sizes="180x180" href="{{ url_for('static', filename='logo.png') }}">
 <head>
     <!-- Meta Tags -->
     <meta charset="UTF-8">
